[package]
name = "panic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# By default, Rust will back-trace up the call stack and clean up memory.
# This can be time-consuming, so this setting disables that clean-up and lets the OS clean up memory.
[profile.release]
panic = 'abort'

[dependencies]
